--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
   - "3.6"
 
 install:
-  - pip install pyyaml gbulb sanic websockets psutil requests
+  - pip install pyyaml gbulb sanic websockets psutil requests image
 
 script:
   - pytest
