--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,12 @@ language: python
 python:
   - "3.6"
 
+addons:
+  apt:
+    packages:
+    - python3-gi
+
 install:
-  - apt-get install python3-gi
   - pip install pyyaml gbulb sanic websockets psutil requests image
 
 script:
