--- a/.travis.yml
+++ b/.travis.yml
@@ -18,14 +18,11 @@ addons:
     - gstreamer1.0-plugins-ugly
     - gstreamer1.0-libav
     - gstreamer1.0-tools
-    - python-gi
-    - python-gst-1.0
-    - python3-gi
     - python3-gst-1.0
     - python3-pip
 
 install:
-  - pip3 install pyyaml gbulb sanic websockets psutil requests image
+  - pip3 install pyyaml gbulb sanic websockets psutil requests image pygobject
 
 script:
   - pytest
