--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ addons:
     - gstreamer1.0-tools
     - python3-gst-1.0
     - python3-pip
+    - libgirepository1.0-dev
 
 install:
   - pip3 install pyyaml gbulb sanic websockets psutil requests image pygobject
