--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,12 @@ addons:
     - gstreamer1.0-tools
     - python3-gst-1.0
     - python3-pip
-    - gobject-introspection
-    - libgirepository1.0-dev
+
+virtualenv:
+  system_site_packages: true
 
 install:
-  - pip3 install pyyaml gbulb sanic websockets psutil requests image pygobject
+  - pip3 install pyyaml gbulb sanic websockets psutil requests image
 
 script:
   - pytest
