--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ sudo: required
 language: python
 
 python:
-  - "3.6"
+  - "3.4"
 
 addons:
   apt:
@@ -20,6 +20,8 @@ addons:
     - gstreamer1.0-tools
     - python3-gst-1.0
     - python3-pip
+    - gobject-introspection
+    - libgirepository1.0-dev
 
 virtualenv:
   system_site_packages: true
