Support Python 3.6 and add GObject dependency

--- a/Pipfile
+++ b/Pipfile
@@ -13,8 +13,9 @@ pillow = "*"
 pygobject = "*"
 vext = "*"
 psutil = "*"
+gobject = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.7"
+python_version = "3.6"
